--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <div class="bg-red-500 text-white p-2">Test Tailwind</div>
 
   <div id="result"></div>
-  <div class="flex p-3">
+  <div class="flex flex-col p-3">
     <div class="flex flex-col justify-center p-3 m-3 border-solid border-2 rounded-lg">
       <form
         hx-post="/input-lang" 
