--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,7 @@
       </form>
     </div>
     <div class="flex flex-col justify-center p-3 m-3 border-solid border-2 rounded-lg">
-      <label for="Japanese Output" class="pb-3">Language Output: </label>
-      <textarea id="langOutput" name="langOutput" maxlength="2000" cols="80" rows="16" class="block p-2.5 w-full rounded-lg border focus:ring-yellow-250"></textarea>
+      <div id="langOutput" name="langOutput"></div>
     </div>
   </div>
 </body>
